--- a/templates/collection.html.jinja
+++ b/templates/collection.html.jinja
@@ -38,6 +38,7 @@
 
             {{ streamLink(collection.streamLinks.youtubeLink, site.nitroguy.socials.youtube) }}
             {{ streamLink(collection.streamLinks.soundcloudLink, site.nitroguy.socials.soundcloud) }}
+            {{ streamLink(collection.streamLinks.bandcampLink, site.nitroguy.socials.bandcamp) }}
             {{ streamLink(collection.streamLinks.spotifyLink, site.nitroguy.socials.spotify) }}
             {{ streamLink(collection.streamLinks.appleMusicLink, site.nitroguy.socials.appleMusic) }}
             {{ streamLink(collection.streamLinks.newgroundsLink, site.nitroguy.socials.newgrounds) }}
