--- a/templates/song.html.jinja
+++ b/templates/song.html.jinja
@@ -51,6 +51,7 @@
 
                             {{ streamLink(song.streamLinks.youtubeLink, site.nitroguy.socials.youtube) }}
                             {{ streamLink(song.streamLinks.soundcloudLink, site.nitroguy.socials.soundcloud) }}
+                            {{ streamLink(song.streamLinks.bandcampLink, site.nitroguy.socials.bandcamp) }}
                             {{ streamLink(song.streamLinks.spotifyLink, site.nitroguy.socials.spotify) }}
                             {{ streamLink(song.streamLinks.appleMusicLink, site.nitroguy.socials.appleMusic) }}
                             {{ streamLink(song.streamLinks.newgroundsLink, site.nitroguy.socials.newgrounds) }}
