Updated projects and added Spotify link

--- a/templates/articles/projects.html.jinja
+++ b/templates/articles/projects.html.jinja
@@ -26,6 +26,24 @@
         <br>
         <hr>
 
+        <h2 class="article-subsection" id="Compara2r">Compara2r</h2>
+        <h3 class="article-subtitle">3 March 2022 - 10 May 2022</h3>
+        <h3 class="article-subtitle">HTML, CSS, JavaScript - Node.js, Express, PostgreSQL, TailwindCSS</h3>
+        <img src="../images/projects/compara2r.png" class="article-image-intext" style="width: 40%;"
+            alt="A Compara2r prompt">
+        <p>Compara2r (pronounced "comparator") is a web app which you can use to find out the best thing among a dataset through 1-vs-1 comparisons.
+            Users are shown a random comparison and are prompted to vote on which item they think is better.
+            Users can vote as many times as they want and can also flag inappropriate items.
+            Server admins can download the results and find out once and for all the best ...whatever... of all time.
+        </p>
+        <p>This was the first time I ever created a full-stack web app from scratch all by myself!
+            It was super fun and I learned lot about creating backend servers, using databases, and deployment.
+            Speaking of, I actually deployed Compara2r on Heroku using a free dyno which doesn't exist anymore because, sadly but understandably, Heroku are not offering their services for free anymore.
+            Also TailwindCSS is awesome.
+        </p>
+        <p><a href="{{ site.nitroguy.socials.github.link }}/Compara2r">Compara2r on GitHub</a></p>
+        <hr>
+
         <h2 class="article-subsection" id="recommends">recommends</h2>
         <h3 class="article-subtitle">25 December 2021 - 4 January 2022</h3>
         <h3 class="article-subtitle">Python, HTML, CSS, JavaScript - Flask, Jinja, SQLite, PyNaCl</h3>
@@ -221,6 +239,30 @@
                 href="about_website.html">article about my website</a>.
         </p>
         <p><a href="{{ site.nitroguy.socials.github.link }}/tuscon">tuscon on GitHub</a></p>
+        <hr>
+
+        <h2 class="article-subsection" id="fructose">fructose</h2>
+        <h3 class="article-subtitle">19 June 2020</h3>
+        <h3 class="article-subtitle">Python, HTML, CSS, JavaScript - Flask, SQLite</h3>
+        <img src="../images/projects/fructose.png" class="article-image-intext" style="width: 40%;"
+            alt="The docbox homepage">
+        <p>A sweet and simple file hosting service.</p>
+        <p>This is another one-day project made by <a href="https://prydt.xyz/">prydt</a> and myself. You could call it a "sequel" to docbox.
+        Making these two were super fun and I definitely learned a lot in the process. They were like mini self-run hackathons!
+        </p>
+        <p><a href="https://github.com/woke-oats/fructose">fructose on GitHub</a></p>
+        <hr>
+
+        <h2 class="article-subsection" id="docbox">docbox</h2>
+        <h3 class="article-subtitle">13 June 2020</h3>
+        <h3 class="article-subtitle">Python, HTML, CSS, JavaScript - Flask, SQLite</h3>
+        <img src="../images/projects/docbox.png" class="article-image-intext" style="width: 40%;"
+            alt="The docbox homepage">
+        <p>A text storage server for you and all your friends. It's Pastebin basically.</p>
+        <p><a href="https://prydt.xyz/">prydt</a> and I made this in one day during the 2020 COVID lockdown.
+            This was my first experience working on a full-stack web app, albeit a simple one.
+        </p>
+        <p><a href="https://github.com/woke-oats/docbox">docbox on GitHub</a></p>
         <hr>
 
         <h2 class="article-subsection" id="Pi555">Pi555</h2>
