--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -113,11 +113,14 @@
         </noscript>
         <p>I've made a bunch of cool software, plugins, webpages, and other projects which you can find on my <a
                 href="{{ site.nitroguy.socials.github.link }}">GitHub</a>. If you wanna hear my commentary about them,
-            I've made this <a href="articles/projects.html">article</a>.</p>
+            I've got just the article for you!</p>
+        <h2><a href="articles/projects.html">Projects Article</a></h2>
         <p>If you're just looking for the highlights, here are some of them:</p>
         <ul id="projects-list">
+            <li><a href="{{ site.nitroguy.socials.github.link }}/Compara2r">Compara2r</a></li>
+            <li><a href="https://github.com/prydt/recommends">recommends</a></li>
+            <li><a href="{{ site.nitroguy.socials.github.link }}/ERS-OL">ERS-OL</a></li>
             <li><a href="{{ site.nitroguy.socials.github.link }}/Vegas-Scripts">Plugins/Scripts for VEGAS Pro</a></li>
-            <li><a href="{{ site.nitroguy.socials.github.link }}/ERS-OL">Online Egyptian Rat Screw game</a></li>
             <li><a href="articles/about_website.html">How this website was made</a> (it's more complex than you might
                 think!)</li>
         </ul>
