--- a/templates/portfolio.html.jinja
+++ b/templates/portfolio.html.jinja
@@ -31,6 +31,24 @@
         <br>
         <hr>
 
+        <h2 class="article-subsection" id="Compara2r">Compara2r</h2>
+        <h3 class="article-subtitle">3 March 2022 - 10 May 2022</h3>
+        <h3 class="article-subtitle">HTML, CSS, JavaScript - Node.js, Express, PostgreSQL, TailwindCSS</h3>
+        <img src="./images/projects/compara2r.png" class="article-image-intext" style="width: 40%;"
+            alt="A Compara2r prompt">
+        <p>Compara2r (pronounced "comparator") is a web app which you can use to find out the best thing among a dataset through 1-vs-1 comparisons.
+            Users are shown a random comparison and are prompted to vote on which item they think is better.
+            Users can vote as many times as they want and can also flag inappropriate items.
+            Server admins can download the results and find out once and for all the best ...whatever... of all time.
+        </p>
+        <p>This was the first time I ever created a full-stack web app from scratch all by myself.
+            It was super fun and I learned lot about creating backend servers, using databases, and deployment.
+            Speaking of, I actually deployed Compara2r on Heroku using a free dyno which doesn't exist anymore, sadly.
+        </p>
+        <p><a href="{{ site.nitroguy.socials.github.link }}/Compara2r">Compara2r on GitHub</a></p>
+        <hr>
+
+
         <h2 class="article-subsection" id="recommends">recommends</h2>
         <img src="./images/projects/recommends.png" class="article-image-intext" style="width: 40%;"
             alt="A user's page on recommends">
