Added HelpR to list of projects and portfolio

--- a/templates/articles/projects.html.jinja
+++ b/templates/articles/projects.html.jinja
@@ -26,6 +26,28 @@
         <br>
         <hr>
 
+
+        <h2 class="article-subsection" id="HelpR">HelpR</h2>
+        <h3 class="article-subtitle">22 January 2022 - 1 October 2022 (First Public Deployment) - Ongoing</h3>
+        <h3 class="article-subtitle">JavaScript - Node.js, Express, PostgreSQL, TypeORM, Socket.io</h3>
+        <img src="../images/projects/helpr.png" class="article-image-intext" style="width: 40%;"
+            alt="The HelpR landing page">
+        <p>HelpR is a web app where hackathon participants can submit help tickets if they get stuck while making their project.
+            The tickets get answered in real-time as mentors at the event will find hackers based on the location they attached to their ticket, and provide the assistance the hackers need.
+            It's also a spiritual successor to <a href="https://github.com/ehzhang/HELPq">HELPq</a>.
+        </p>
+        <p>This might be the largest-scale project I've worked on thus far! It was made in a team 3 for use at TAMUhack hackathons.
+            It was first deployed at HowdyHack 2022 on 1-2 October 2022 for use by 200+ hackers, and it worked amazingly with practically no hitches!
+            (Sorry for all the exclamation marks. I'm really excited about this one if you can't tell :p)
+        </p>
+        <p>I was completely responsible for writing the backend for this app. I created a robust REST API with Express and used a PostgreSQL database to store users and tickets.
+            I didn't make the frontend but, in case you were wondering, it's made using React, Next.js, and TailwindCSS.
+            This project took months of development but it definitely paid off ...and we're not even done! We're gonna rewrite the whole thing in TypeScript soon. Wish us luck!
+        </p>
+        <p><a href="https://github.com/tamuhack-org/helpR">HelpR on GitHub</a></p>
+        <p><a href="https://github.com/tamuhack-org/helpr-frontend">HelpR Frontend on GitHub</a></p>
+        <hr>
+
         <h2 class="article-subsection" id="Compara2r">Compara2r</h2>
         <h3 class="article-subtitle">3 March 2022 - 10 May 2022</h3>
         <h3 class="article-subtitle">HTML, CSS, JavaScript - Node.js, Express, PostgreSQL, TailwindCSS</h3>
